--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "zenn",
+  "productName": "2setMatch",
   "version": "1.0.0",
   "description": "",
   "main": "dist/main.js",
@@ -19,11 +20,17 @@
     "@types/node": "^17.0.29",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "electron": "^18.1.0",
     "electron-packager": "^15.5.1",
     "electron-reload": "^2.0.0-alpha.1",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "npm-run-all": "^4.1.5",
